# pourup-light

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README.md  pupl.h  test.c
ppyl/: CMakeLists.txt  format.cpp  json_work.cpp  macros.cpp  main.cpp  ppyl.h  work.cpp
ppyl/puppy-light-highlights/: CHANGELOG.md  README.md  language-configuration.json  package.json  puppy-light-highlights-0.0.1.vsix  vsc-extension-quickstart.md
ppyl/puppy-light-highlights/syntaxes/: ppyl.tmLanguage.json
src/: const.h  environ.c  environ.h  item.c  item.h  operation.c  operation.h  reader.c  reader.h  syntax.c  syntax.h  sys.c  sys.h
